# malvolio

./: .gitignore  APACHE-2.0  CHANGELOG.md  Cargo.toml  LICENSE  README.md  bors.toml  rust-toolchain.toml
.github/workflows/: test.yml
malvolio/: Cargo.toml  README.md  fuzz.sh
malvolio/src/: lib.rs  macros.rs  mutators.rs  strategies.rs  text.rs  utils.rs  vnode.rs
malvolio/src/attributes/: common.rs  mod.rs
malvolio/src/docs/: mod.rs
malvolio/src/tags/: a.rs  br.rs  div.rs  headings.rs  html.rs  img.rs  input.rs  label.rs  meta.rs  mod.rs  noscript.rs  option.rs  p.rs  select.rs  style.rs  title.rs
malvolio/src/tags/body/: body_node.rs  mod.rs
malvolio/src/tags/form/: mod.rs
malvolio/src/tags/head/: head_node.rs  mod.rs
malvolio/tests/: test_yew_rendering.rs
malvolio_codegen/: Cargo.toml
malvolio_codegen/src/: lib.rs
src/: fuzz.rs  lib.rs  macros.rs  prelude.rs  text.rs
src/attributes/: common.rs
src/tags/: a.rs  br.rs  div.rs  headings.rs  html.rs  img.rs  input.rs  label.rs  meta.rs  noscript.rs  option.rs  p.rs  select.rs  style.rs  title.rs
src/tags/body/: body_node.rs  mod.rs
src/tags/form/: mod.rs
src/tags/head/: head_node.rs  mod.rs
