[package]
name = "malvolio"
version = "0.4.0"
authors = ["Teymour Aldridge <teymour@reasoning.page>"]
edition = "2021"
readme = "README.md"
description = "An HTML templating library."
repository = "https://github.com/lovelace-ed/lovelace"
homepage = "https://github.com/lovelace-ed/lovelace"
license = "MPL-2.0"
keywords = ["web-applications", "HTML"]

[dependencies]
ammonia = "3.2"

[dev-dependencies]
ego-tree = "0.6.2"
scraper = "0.12.0"
serde_json = "1.0.75"
