[package]
name = "malvolio"
version = "0.4.1"
authors = ["Teymour Aldridge <teymour@reasoning.page>"]
edition = "2021"
readme = "README.md"
description = "A library for programmatically generating HTML."
repository = "https://github.com/puck-rs/malvolio"
homepage = "https://github.com/puck-rs/malvolio"
license = "BSD-3-Clause OR Apache-2.0"
keywords = ["web-applications", "HTML"]

[dependencies]
ammonia = "3.2"

[dev-dependencies]
ego-tree = "0.6.2"
scraper = "0.12.0"
serde_json = "1.0.75"
