[package]
name = "malvolio"
version = "0.3.1"
authors = ["Teymour Aldridge <notifications@reasoning.page>"]
edition = "2018"
readme = "README.md"
description = "An HTML templating library."
repository = "https://github.com/lovelace-ed/lovelace"
homepage = "https://github.com/lovelace-ed/lovelace"
license = "MPL-2.0"
keywords = ["web-applications", "HTML"]

[features]
pub_fields = ["malvolio_codegen"]
fuzz = ["fuzzcheck", "serde"]

[dependencies]
ammonia = "3.1.2"
derivative = "2.2.0"
fuzzcheck = { version = "0.10.0", optional = true }
malvolio_codegen = { path = "../malvolio_codegen", version = "0.1.0", optional = true }
serde = { version = "1.0.133", optional = true, features = ["derive"] }

[dev-dependencies]
ego-tree = "0.6.2"
scraper = "0.12.0"
serde_json = "1.0.75"
